🚨 WIP Fix `abstractMethods`